--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/nav_latins"
-    tools:context=".ui.fragments.MainFragment">
+    tools:context=".ui.fragments.MainFragments">
 
 
     <ImageView
@@ -20,8 +20,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
-
 
 <!--    <android.support.design.widget.AppBarLayout-->
 <!--        android:layout_width="match_parent"-->
