--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,6 @@
     android:id="@+id/nav_latins"
     tools:context=".ui.fragments.MainFragments">
 
-
     <ImageView
         android:id="@+id/bg_main"
         android:background="?attr/backgroundImage"
@@ -20,11 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
-<!--    <android.support.design.widget.AppBarLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--       >-->
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -79,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:rotation="180"
         android:background="?attr/arrow"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/bg_main"
