--- a/app/src/main/res/layout/video_fragment_main.xml
+++ b/app/src/main/res/layout/video_fragment_main.xml
@@ -19,7 +19,6 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:tint="@android:color/holo_red_dark"/>
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -27,20 +26,36 @@
             android:gravity="center"
             android:text="Qyzyqty content"
             android:paddingStart="10dp"
-            android:textColor="@android:color/white"
-            android:textSize="23sp"
+            android:textSize="17sp"
             android:textStyle="bold"
             tools:ignore="RtlSymmetry" />
     </androidx.appcompat.widget.Toolbar>
+
+    <EditText
+        android:id="@+id/search"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_margin="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:background="@drawable/search_video"
+        android:drawableStart="@drawable/search_input"
+        android:drawablePadding="6dp"
+        android:hint="Іzdeý"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text=""
+        android:textSize="16sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videoRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent">
+    </androidx.recyclerview.widget.RecyclerView>
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
