--- a/app/src/main/res/xml/main_scene.xml
+++ b/app/src/main/res/xml/main_scene.xml
@@ -38,6 +38,15 @@
         </KeyFrameSet>
     </Transition>
 
-    <ConstraintSet android:id="@+id/expanded" />
+    <ConstraintSet android:id="@+id/expanded" >
+        <Constraint
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/country_search"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="60dp" />
+    </ConstraintSet>
     <ConstraintSet android:id="@+id/collapsed" />
 </MotionScene>
