--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#fff"
     android:id="@+id/nav_likes"
-    tools:context=".ui.fragments.FavoritesFragment">
+    tools:context=".view.fragments.FavoritesFragment">
 
 
     <androidx.appcompat.widget.Toolbar
