--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/nav_latins"
-    tools:context=".ui.fragments.MainFragments">
+    tools:context=".view.fragments.MainFragments">
 
     <ImageView
         android:id="@+id/bg_main"
