--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/trans"
-    tools:context=".ui.fragments.YandexFragment">
+    tools:context=".view.fragments.YandexFragment">
 
 
     <ImageView
