--- a/app/src/main/res/layout/fragment_video_motion.xml
+++ b/app/src/main/res/layout/fragment_video_motion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<kz.kaspi.translit.ui.SingleTouchMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<kz.kaspi.translit.view.SingleTouchMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:id="@+id/videoMotionLayout"
 android:layout_width="match_parent"
@@ -18,7 +18,7 @@ app:layout_collapseMode="parallax">
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-<kz.kaspi.translit.ui.VideoPlayerView
+<kz.kaspi.translit.view.VideoPlayerView
     android:id="@+id/videoPlayerView"
     android:layout_width="0dp"
     android:layout_height="0dp"
@@ -61,5 +61,5 @@ app:layout_collapseMode="parallax">
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</kz.kaspi.translit.ui.SingleTouchMotionLayout>
+</kz.kaspi.translit.view.SingleTouchMotionLayout>
 
