--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -7,7 +7,6 @@
     android:id="@+id/nav_likes"
     tools:context=".view.fragments.FavoritesFragment">
 
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarTranslate"
         android:layout_width="match_parent"
@@ -15,20 +14,16 @@
         android:background="?attr/bottomNavigation"
         android:theme="@style/MyActionButtonOverflow"
         android:minHeight="?attr/actionBarSize"
-
         tools:ignore="MissingConstraints">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:orientation="horizontal">
-
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:text="Unaǵandar tіzіmі"
-
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
     </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -37,11 +32,10 @@
         android:id="@+id/listFavorites"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:scrollbars="vertical"
-        />
+        app:layout_constraintTop_toTopOf="@+id/toolbarTranslate" />
 
     <TextView
         android:id="@+id/favTextw"
@@ -51,6 +45,5 @@
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="551dp"
         tools:ignore="MissingConstraints" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
