--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/nav_latins"
-    tools:context=".view.fragments.MainFragments">
+    tools:context=".view.fragments.MainFragment">
 
     <ImageView
         android:id="@+id/bg_main"
@@ -30,20 +30,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:minHeight="?attr/actionBarSize"
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/themeButton"
+                android:id="@+id/changeTheme"
                 android:layout_width="34dp"
                 android:layout_height="34dp"
                 android:background="?attr/toggle_theme"
                 android:text="" />
-
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -51,9 +49,18 @@
                 android:layout_weight="1"
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                 />
+                tools:ignore="RtlSymmetry" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#03A9F4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listTranslateView"
@@ -65,9 +72,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:ignore="NotSibling" />
+       />
 
-    <TextView
+    <ImageButton
         android:id="@+id/scroll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,15 +82,26 @@
         android:layout_marginBottom="16dp"
         android:rotation="180"
         android:background="?attr/arrow"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/bg_main"
         app:layout_constraintEnd_toEndOf="parent"
     />
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#03A9F4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/kazText"
+        tools:ignore="UnknownIdInLayout" />
+
+
     <EditText
         android:id="@+id/inputtext"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
         android:background="?attr/editTextBackground"
         android:hint="@string/hint"
         android:includeFontPadding="false"
@@ -103,17 +121,14 @@
 
     <ImageButton
         android:id="@+id/send_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="355dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#00FFFFFF"
         android:src="?attr/sendBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/inputtext"
         app:layout_constraintTop_toTopOf="@+id/inputtext"
         app:layout_constraintVertical_bias="0.4" />
 
