--- a/app/src/main/res/layout/fragment_video_motion.xml
+++ b/app/src/main/res/layout/fragment_video_motion.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<kz.kaspi.translit.view.SingleTouchMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<kz.kaspi.translit.view.SingleTouchMotionLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:id="@+id/videoMotionLayout"
 android:layout_width="match_parent"
@@ -55,6 +56,7 @@ app:layout_collapseMode="parallax">
         android:fontFamily="sans-serif-light"
         android:text="Молодого мажора по имени Азамат, привыкшего к комфортной городской жизни, по стечению непредвиденных обстоятельств, отправляют работать Акимом в отдаленный посёлок - Таза Булак. ... С первого дня пребывания в ауле, новоиспечённый Аким мечтает о том, чтобы вернуться в город."
         android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
