--- a/app/src/main/res/layout/translate_items.xml
+++ b/app/src/main/res/layout/translate_items.xml
@@ -13,12 +13,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="20dp">
 
         <TextView
             android:id="@+id/cyrlic_kazakh"
-            android:layout_width="380dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="12dp"
@@ -36,7 +36,7 @@
 
         <TextView
             android:id="@+id/latin_kazakh"
-            android:layout_width="380dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
