--- a/app/src/main/res/layout/translate_yandex_items.xml
+++ b/app/src/main/res/layout/translate_yandex_items.xml
@@ -14,14 +14,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="20dp">
 
         <TextView
             android:id="@+id/input_lng"
-            android:layout_width="380dp"
-            android:text=""
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text=""
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="24dp"
@@ -37,9 +37,9 @@
 
         <TextView
             android:id="@+id/trans_res"
-            android:layout_width="380dp"
-            android:text=""
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text=""
             android:layout_marginTop="60dp"
             android:layout_marginEnd="32dp"
             android:background="?attr/editTextBackground"
