--- a/app/src/main/res/xml/main_scene.xml
+++ b/app/src/main/res/xml/main_scene.xml
@@ -40,13 +40,59 @@
 
     <ConstraintSet android:id="@+id/expanded" >
         <Constraint
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/country_search"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_editor_absoluteX="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:id="@+id/editText2" />
+        <Constraint
+            android:id="@+id/editText2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="60dp" />
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toBottomOf="@id/view2"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent" />
+        <Constraint
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/searchRecycler"
+            android:layout_marginTop="8dp" />
+        <Constraint
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="47dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toBottomOf="@id/view2"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/editText2"
+            android:layout_marginTop="8dp" />
     </ConstraintSet>
-    <ConstraintSet android:id="@+id/collapsed" />
+    <ConstraintSet android:id="@+id/collapsed" >
+        <Constraint
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="47dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toBottomOf="@id/view2"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/editText2"
+            android:layout_marginTop="8dp" />
+        <Constraint
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/searchRecycler"
+            android:layout_marginTop="8dp" />
+    </ConstraintSet>
+
+
 </MotionScene>
